frontend/src/css/ScoreBoard.css
.scoreboard {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 8px;
  padding-left: 2rem;
  padding-bottom: 5rem;
  margin-top: -40px;
}

.scoreboard-player {
  display: flex;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.75);
  border-radius: 8px;
  padding: 6px 12px;
  min-width: 180px;
}

.player-rank {
  width: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 8px;
}

.player-rank img {
  width: 30px;
  height: 30px;
}

.rank-text {
  color: black;
  font-size: 1rem;
  font-weight: bold;
}

.player-info {
  display: flex;
  flex-direction: column;
}

.player-name {
  font-weight: bold;
  font-size: 1rem;
  color: black;
}

.player-points {
  font-size: 1rem;
  color: black;
  text-align: center;
}

